[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1" # Stores config data locally
eframe = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
newsapi = { path = "../news_rust/newsapi" }